// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapObjectColumnsFromModel 1`] = `
{
  "emptyFieldsNotice": undefined,
  "fields": [
    {
      "canBeUsedToMatch": false,
      "defaultMatch": false,
      "defaultValue": "demo_project_01",
      "display": false,
      "displayName": "@tagname",
      "id": "@tagname",
      "readOnly": true,
      "required": false,
      "type": "string",
    },
    {
      "canBeUsedToMatch": false,
      "defaultMatch": false,
      "defaultValue": "",
      "display": false,
      "displayName": "@idPrefix",
      "id": "@idPrefix",
      "readOnly": true,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": true,
      "defaultValue": "mqtt-$tagname-$nanoid",
      "display": true,
      "displayName": "ClientId",
      "id": "id",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": "mqtt-$tagname-$nanoid",
      "display": true,
      "displayName": "Name",
      "id": "name",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": true,
      "defaultValue": "",
      "display": true,
      "displayName": "Description",
      "id": "description",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": "",
      "display": true,
      "displayName": "Type",
      "id": "type",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": "",
      "display": true,
      "displayName": "Status",
      "id": "status",
      "options": [
        {
          "name": "status_a",
          "value": "status_a",
        },
        {
          "name": "status_b",
          "value": "status_b",
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": "",
      "display": true,
      "displayName": "mqtt_auth: mqtt_username",
      "id": "config.auth.username",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": "",
      "display": true,
      "displayName": "mqtt_auth: mqtt_password",
      "id": "config.auth.password",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": "state",
      "display": true,
      "displayName": "Position: display from",
      "id": "config.position.display",
      "options": [
        {
          "name": "State",
          "value": "state",
        },
        {
          "name": "Config",
          "value": "config",
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": null,
      "display": true,
      "displayName": "Position: latitude",
      "id": "config.position.lat",
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": null,
      "display": true,
      "displayName": "Position: longitude",
      "id": "config.position.lon",
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Configs: String",
      "id": "config.configs.string",
      "options": undefined,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Configs: String dropdown",
      "id": "config.configs.string-dropdown",
      "options": [
        {
          "name": "Value of "on"",
          "value": "on",
        },
        {
          "name": "Value of "off"",
          "value": "off",
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": "66d3296625e8200c9d46981e",
      "display": true,
      "displayName": "Configs: Table",
      "id": "config.configs.table",
      "options": undefined,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": 3,
      "display": true,
      "displayName": "Settings: Number",
      "id": "config.settings.number",
      "options": undefined,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Settings: Number range",
      "id": "config.settings.number-range",
      "options": undefined,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Settings: Number slider",
      "id": "config.settings.number-slider",
      "options": undefined,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Settings: Number dropdown",
      "id": "config.settings.number-dropdown",
      "options": [
        {
          "name": "Value of 1",
          "value": 1,
        },
        {
          "name": "Value of 2",
          "value": 2,
        },
        {
          "name": "Value of 3",
          "value": 3,
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Params: Flag",
      "id": "config.params.flag",
      "options": undefined,
      "required": false,
      "type": "boolean",
    },
  ],
}
`;

exports[`mapObjectQueryFromModel 1`] = `
{
  "emptyFieldsNotice": undefined,
  "fields": [
    {
      "defaultMatch": false,
      "defaultValue": "",
      "display": true,
      "displayName": "Status",
      "id": "status",
      "options": [
        {
          "name": "status_a",
          "value": "status_a",
        },
        {
          "name": "status_b",
          "value": "status_b",
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": "",
      "display": true,
      "displayName": "mqtt_auth: mqtt_username",
      "id": "config.auth.username",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Configs: String",
      "id": "config.configs.string",
      "options": undefined,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Configs: String dropdown",
      "id": "config.configs.string-dropdown",
      "options": [
        {
          "name": "Value of "on"",
          "value": "on",
        },
        {
          "name": "Value of "off"",
          "value": "off",
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": "66d3296625e8200c9d46981e",
      "display": true,
      "displayName": "Configs: Table",
      "id": "config.configs.table",
      "options": undefined,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "defaultValue": 3,
      "display": true,
      "displayName": "Settings: Number",
      "id": "config.settings.number",
      "options": undefined,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Settings: Number range",
      "id": "config.settings.number-range",
      "options": undefined,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Settings: Number slider",
      "id": "config.settings.number-slider",
      "options": undefined,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Settings: Number dropdown",
      "id": "config.settings.number-dropdown",
      "options": [
        {
          "name": "Value of 1",
          "value": 1,
        },
        {
          "name": "Value of 2",
          "value": 2,
        },
        {
          "name": "Value of 3",
          "value": 3,
        },
      ],
      "required": false,
      "type": "options",
    },
    {
      "defaultMatch": false,
      "defaultValue": undefined,
      "display": true,
      "displayName": "Params: Flag",
      "id": "config.params.flag",
      "options": undefined,
      "required": false,
      "type": "boolean",
    },
  ],
}
`;

exports[`mapTableRowQuery 1`] = `
{
  "emptyFieldsNotice": undefined,
  "fields": [
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Имя",
      "id": "where.data.name",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "На работе",
      "id": "where.data.working",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "boolean",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Дата рождения",
      "id": "where.data.date_of_birth",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "dateTime",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Номер шкафчика",
      "id": "where.data.locker_No",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Дополнительная информация",
      "id": "where.data.info",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Дата создания",
      "id": "where.data.time",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "dateTime",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Идентификатор",
      "id": "where.data._id",
      "readOnly": false,
      "removed": false,
      "required": false,
      "type": "string",
    },
  ],
}
`;

exports[`mapTelemetryParams 1`] = `
{
  "emptyFieldsNotice": undefined,
  "fields": [
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Basic: online",
      "id": "online",
      "required": false,
      "type": "boolean",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Basic: time",
      "id": "time",
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Number",
      "id": "arg-number",
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Numeric - Gbit",
      "id": "arg-number-unit",
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Boolean",
      "id": "arg-boolean",
      "required": false,
      "type": "boolean",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Stringy",
      "id": "arg-string",
      "required": false,
      "type": "string",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Object",
      "id": "arg-object",
      "required": false,
      "type": "object",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Sub - A",
      "id": "sub-a",
      "required": false,
      "type": "number",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Sub - B",
      "id": "sub-b",
      "required": false,
      "type": "boolean",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Of numbers",
      "id": "arg-list-number",
      "required": false,
      "type": "array",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Of booleans",
      "id": "arg-list-bool",
      "required": false,
      "type": "array",
    },
    {
      "defaultMatch": false,
      "display": true,
      "displayName": "Of strings",
      "id": "arg-list-string",
      "required": false,
      "type": "array",
    },
  ],
}
`;
